fix: Clippath h3s behave badly in columns #175
fixes #175?

Hoping this will keep these from getting awkwardly crampedp within 30%-50% size columns.

check my work @laras126

--- a/src/css/_c4aa-clipPaths.css
+++ b/src/css/_c4aa-clipPaths.css
@@ -130,7 +130,7 @@ h4.is-style-c4aa-clipPath-heading {
 
 	.entry .entry-content > h3.is-style-c4aa-clipPath-heading,
 	h3.is-style-c4aa-clipPath-heading {
-		max-width: 50%;
+		width: max-content;
 	}
 
 	.entry .entry-content > h4.is-style-c4aa-clipPath-heading,
